# expense-tracker

./: .gitignore  .gitlint  README.md  alembic.ini  app.py  conftest.py  pyproject.toml  requirements.txt  sample-conf.py  scrape.py
.github/workflows/: test.yml
.streamlit/: config.toml  secrets.toml
alembic/: env.py
alembic/versions/: 0a755389be4c_add_transaction_counterparty_columns.py  0ea511b292be_new_ids_table.py  4b6790846b03_add_tag_many_to_many.py  4e45ce3ba587_add_source_column.py  62b968b25972_add_category_table_and_association_table.py  834c91a1644e_add_ignore_column.py  8b5b656072ca_source_file_source_line_columns.py  9befc1f324c4_make_category_relation_many_to_one.py  b6ac5b6e67bf_add_reviewed_column.py  c97322f9bec0_initial_table.py  d4144ee20c0c_add_parent_column.py  d97b345819ad_rename_tables.py
app/: app.py  cloud.py  csv_types.py  data.py  db_util.py  model.py  parse_util.py  source.py  style.css  util.py
app/components/: git_status.py
app/lib/: git_manager.py
app/pages/: dashboard.py  data_management.py
app/scrapers/: __init__.py  axis.py  base.py  cash.py  sbi.py
data/: country-codes.json  indian-cities.json
sample/: README.md  axis-cc-statement-0.csv  axis-cc-statement-1.csv  axis-cc-statement.csv  axis-cc-statement.html  axis-statement.csv  cash.csv  conf.py  conf.toml  sbi-statement.csv
scripts/: axis-scraper.py  csv-file-creator.py  csvparser.py  data-update.sh  gdrive-csv.py  gform-update.py  gitlint_rules.py  lint  lint-commits  parse-data.py  parse-old-data.py  run-sample.sh  sbi-read-csv.py  screenshot.py  update.py  update.sh
