[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]

[tool.poetry.dependencies]
python = ">3.9.7,<4.0"
seleniumbase = "^4.29.3"
pytest-parallel = "^0.1.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.31"
streamlit = "^1.13.0"
alembic = "^1.8.1"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
