[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
seleniumbase = "^4.29.3"
pytest-parallel = "^0.1.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.31"
streamlit = "^1.13.0"
alembic = "^1.8.1"
pyperclip = "^1.8.2"
openpyxl = "^3.1.5"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
zulint = {git = "https://github.com/zulip/zulint.git"}
ruff = "^0.6.7"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
