[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
seleniumbase = "^4.29.3"
pytest-parallel = "^0.1.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.31"
streamlit = "^1.13.0"
alembic = "^1.8.1"
pyperclip = "^1.8.2"
openpyxl = "^3.1.5"
gitpython = "^3.1.43"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
zulint = {git = "https://github.com/zulip/zulint.git"}
ruff = "^0.6.7"
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240909"
types-requests = "^2.32.0.20240914"
types-beautifulsoup4 = "^4.12.0.20240907"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# https://beta.ruff.rs/docs/rules/#tryceratops-try
select = [
    "ANN", # annotations
    "B", # bugbear
    "C4", # comprehensions
    "COM", # trailing comma
    "DJ", # Django
    "DTZ", # naive datetime
    "E", # style errors
    "EXE", # shebang
    "F", # flakes
    "FLY", # string formatting
    "G", # logging format
    "I", # import sorting
    "INT", # gettext
    "ISC", # string concatenation
    "N", # naming
    "PGH", # pygrep-hooks
    "PIE", # miscellaneous
    "PL", # pylint
    "PYI", # typing stubs
    "Q", # quotes
    "RSE", # raise
    "RUF", # Ruff
    "S", # security
    "SIM", # simplify
    "T10", # debugger
    "UP", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "COM812", # Trailing comma missing
    "DJ001", # Avoid using `null=True` on string-based fields
    "DJ008", # Model does not define `__str__` method
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "S105", # Possible hardcoded password
    "S607", # Starting a process with a partial executable path
    # Temporarily ignored
    "ANN001", # Missing type annotation
    "ANN201", # Missing return type annotation
    "ANN202", # Missing return type annotation
    "ANN204", # Missing return type annotation
    "ANN205", # Missing return type annotation
    "ANN206", # Missing return type annotation
    "SIM117", #multiple-with-statements
]
